--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "@devmiguelangel",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "build:dev": "webpack-dev-server"
   },
   "dependencies": {},
   "devDependencies": {
@@ -15,6 +16,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "style-loader": "1.0.0",
     "webpack": "4.41.2",
-    "webpack-cli": "3.3.10"
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.9.0"
   }
 }
