--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "build": "webpack",
     "build:dev": "webpack-dev-server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/runtime": "7.7.2"
+  },
   "devDependencies": {
+    "@babel/core": "7.7.2",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.7.1",
+    "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
