--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "build:dev": "webpack-dev-server"
   },
   "dependencies": {
-    "@babel/runtime": "7.7.2"
+    "@babel/runtime": "7.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.7.1",
+    "@babel/preset-react": "7.7.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
